<resources>
    <string name="mapbox_access_token">sk.eyJ1Ijoibm5kMjQiLCJhIjoiY204eTluZzl6MDhtcjJqc2FsMzN3Z3ozaCJ9.wigbyhwGl22d2pdzdntD_g</string>
    <string name="google_client_id">931496416191-pr28dm2ddhdq17jemlc684cjbjbau5hv.apps.googleusercontent.com</string>
    <string name="app_name">PTIT FOOD</string>
    <string name="cart_icon">Cart</string>
    <string name="notification_icon">Notifi</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="loginWithFacebook">Login with Facebook</string>">
    <string name="loginWithGoogle">Login with Google</string>">
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="confirmOTP">Confirm OTP</string>
    <string name="resetPassword">Reset Password</string>">
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="next">Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>">
    <string name="phonenumber">Phonenumber</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>">
    <string name="youAlreadyHaveAccount">You already have an account?</string>">
    <string name="resendOTP">Resend OTP</string>">
    <string name="or">Or</string>">
    <string name="send">Send</string>">
    <string name="findFood">Find Food</string>">
    <string name="introduce1" translatable="false">Tìm đồ ăn bạn muốn</string>
    <string name="introduce1_1" translatable="false">Khám phá những món ăn ngon nhất từ hơn 1.000</string>
    <string name="introduce1_2" translatable="false">nhà hàng và giao hàng nhanh chóng đến tận nhà bạn.</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="favorite">Favorite</string>
    <string name="location">Location</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="all_payment_methods">All payment methods</string>
    <string name="card">Card</string>
    <string name="add_card">Add card</string>
    <string name="input_card_number">Input Card Number</string>
    <string name="input_security_code">Input Security Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="current_orders">Current orders</string>
    <string name="track_order_progress">Track order progress</string>
    <string name="refresh">Refresh</string>
    <string name="apply">Apply</string>
    <string name="dish">dish</string>
    <string name="reorder">Reorder</string>
    <string name="rating">Rating</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_message">Input message...</string>
    <string name="cart">Cart</string>
    <string name="review_and_comment">Review And Comment</string>
    <string name="review">Review</string>
    <string name="days_ago">days ago</string>
    <string name="shipper">Shipper</string>
    <string name="customer">Customer</string>
    <string name="store_owner">Store Owner</string>
    <string name="discount">Discount</string>
    <string name="menu">Menu</string>
    <string name="store_info">Store information</string>
    <string name="service_quality">Service quality</string>
    <string name="staff_management">Staff management</string>
    <string name="help_center">Help center</string>
    <string name="preorder">Preorder</string>
    <string name="latest">Latest</string>
    <string name="confirmed">Confirmed</string>
    <string name="inform_driver">Thông báo tài xế</string>
    <string name="confirm_password">Confirm password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="change_password">Change Password</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="saved_location">Saved location</string>
    <string name="company">Company</string>
    <string name="save_this_location">Save this location</string>
    <string name="choose_this_location">Choose this location</string>

</resources>