<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.food_ordering_mobile_app.ui.customer.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.food_ordering_mobile_app.ui.customer.account.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_profile"
            app:destination="@id/profile" />
    </fragment>

    <fragment
        android:id="@+id/profile"
        android:name="com.example.food_ordering_mobile_app.ui.customer.account.ProfileFragment"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settings" />
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:name="com.example.food_ordering_mobile_app.ui.customer.favorites.FavoritesFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/orders"
        android:name="com.example.food_ordering_mobile_app.ui.customer.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/messages"
        android:name="com.example.food_ordering_mobile_app.ui.customer.messages.ChatFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_chat" />

</navigation>