<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/backgroundColor"
    tools:context=".ui.customer.settings.ProfileFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_left_24"
                android:drawablePadding="20dp"
                android:text="@string/profile"
                android:layout_marginRight="10dp"
                android:textColor="@color/onPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="20dp">

                <FrameLayout
                    android:id="@+id/imgContainer"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/category_border">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="3dp"
                        android:background="@drawable/category_border"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dess_1" />

                    <ImageView
                        android:id="@+id/checkIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom|right"
                        android:src="@drawable/ic_camera" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:paddingVertical="10dp"
                    android:textColor="@color/primaryColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Xin chào Đạt"
                    android:textColor="@color/onPrimary"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/loginTextViewUsername"
                android:inputType="textEmailAddress"
                android:hint="@string/name"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:inputType="textEmailAddress"
                android:hint="@string/phonenumber"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:inputType="textEmailAddress"
                android:hint="@string/password"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:inputType="textEmailAddress"
                android:hint="@string/confirmPassword"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>