<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".ui.common.RegisterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/onPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_app" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_24"
            android:drawableEnd="@drawable/ic_eye_show_24"
            style="@style/custom_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_24"
            android:drawableEnd="@drawable/ic_eye_show_24"
            style="@style/custom_input" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:text="@string/next"
        style="@style/button_style"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youAlreadyHaveAccount"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            android:onClick="redirectToLoginPage"/>
    </LinearLayout>

</LinearLayout>
