<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".ui.common.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/onPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_app" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_24"
            android:hint="@string/email"
            style="@style/custom_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPassword"
                style="@style/custom_input_password"
                android:drawableStart="@drawable/ic_lock_24"
                android:hint="@string/password"
                android:layout_weight="1"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/btnShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_eye_hide_24"
                style="@style/custom_button_password" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:text="@string/login"
        style="@style/button_style"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textStyle="bold"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            android:onClick="redirectToForgotPasswordPage" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?"
            android:textStyle="bold"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            android:onClick="redirectToForgotPasswordPage" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/secondaryColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="12sp"
            android:textColor="@color/secondaryColor"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/secondaryColor"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <Button
        android:id="@+id/btnLoginFacebook"
        style="@style/facebook_button_style"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_facebook"
        android:text="@string/loginWithFacebook" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <com.developer.gbuttons.GoogleSignInButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login with google"
        style="@style/google_button_style"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontHaveAccount"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:onClick="redirectToRegisterPage"/>
    </LinearLayout>

</LinearLayout>
