<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/backgroundColor"
    tools:context=".ui.customer.settings.AddCardFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_left_24"
                android:drawablePadding="20dp"
                android:text="@string/add_card"
                android:layout_marginRight="10dp"
                android:textColor="@color/onPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:hint="@string/input_card_number"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Expiry"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"/>

                <EditText
                    android:hint="MM"
                    android:width="120dp"
                    android:textAlignment="center"
                    style="@style/custom_input"
                    android:layout_marginRight="20dp" />

                <EditText
                    android:hint="YY"
                    android:width="120dp"
                    android:textAlignment="center"
                    style="@style/custom_input" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:hint="@string/input_security_code"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:hint="@string/first_name"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:hint="@string/last_name"
                style="@style/custom_input" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_card" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>